spring security. Oauth2 authentication (google and github), and refresh token for JWT authentication. to be done later

--- a/ecommerce/src/main/resources/application.yml
+++ b/ecommerce/src/main/resources/application.yml
@@ -117,6 +117,8 @@ spring:
 
 ## security configuration: (like OAuth2 configuration for resource server and OAuth2 client):
 
+# TODO: Oauth2 configuration
+
 ###########################################################################################################################
 
 ## CORS configuration in case you want to configure it from this file:
