--- a/ecommerce/pom.xml
+++ b/ecommerce/pom.xml
@@ -102,6 +102,15 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/com.stripe/stripe-java -->
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>28.2.0</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
