--- a/ecommerce/src/main/resources/application.yml
+++ b/ecommerce/src/main/resources/application.yml
@@ -143,4 +143,8 @@ logging:
 jwt:
   secret: ${JWT_SECRET_KEY}
 
+stripe:
+  api:
+    key: ${STRIPE_SECRET_KEY}
+
 ###########################################################################################################################
