--- a/ecommerce/src/main/resources/application-docker.yml
+++ b/ecommerce/src/main/resources/application-docker.yml
@@ -8,7 +8,7 @@ spring:
     name: ecommerce
   ## Database
   datasource:
-    url: jdbc:mysql://localhost:3306/${MYSQL_DATABASE}
+    url: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
