--- a/ecommerce/src/main/resources/application-prod.yml
+++ b/ecommerce/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ spring:
   ## Database
   datasource:
 #    url: jdbc:mysql://mysql:3306/${MYSQL_DATABASE}
-    url: jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
+    url: jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQL_DATABASE}
     #    username: ${MYSQL_USER}
     username: ${MYSQLUSER}
     #    password: ${MYSQL_PASSWORD}
