changed the server port of the application

--- a/ecommerce/src/main/resources/application-prod.yml
+++ b/ecommerce/src/main/resources/application-prod.yml
@@ -1,7 +1,8 @@
 #this is the production version of the application.yml file
 
 server:
-  port: 8088
+#  port: 8088
+  port: 8080
 
 spring:
   application:
